syntax = "proto3";

option go_package = "./protobuf/pb";
package symbiotic_fp.proto_rpc;

service CelestiaService {
  rpc StateRootSignIDs(StateRootSignIDsRequest) returns (StateRootSignIDsResponse);
}

message StateRootSignIDsRequest {
  string ids = 1;
  uint64 l1_block_number = 2;
}

message StateRootSignIDsResponse {
  bool success = 1;
  string message = 2;
}
